@@ -1,3 +1,11 @@
+* changes v4.0.1 -> xxx:
+
+##
+## Bugs
+##
+
+- Fixed a hash parsing problem when using --show/--left together with hashes with long salts that require pure kernels
+
 * changes v4.0.0 -> v4.0.1:
 
 ##
